tests/cases/structs/errors/union-by-field-assignment.ari
enum CipherType {
  stream,
  block,
  aead,
}

struct SecurityParameters {
  cipher_type: CipherType,
}

struct GenericStreamCipher {
  value: i64,
}

struct GenericBlockCipher {
  value: i64,
}

struct GenericAeadCipher {
  value: i64,
}

struct TLSCiphertext {
  security: SecurityParameters,
  fragment: union by security.cipher_type {
    stream => GenericStreamCipher,
    block => GenericBlockCipher,
    aead => GenericAeadCipher,
  },
}

fn main() -> i64 {
  var packet = TLSCiphertext {
    security: SecurityParameters { cipher_type: stream },
    fragment: stream => GenericStreamCipher { value: 1 },
  };
  packet.fragment = packet.fragment;
  return 0;
}
